linode-k8s-example.yaml
# https://www.linode.com/docs/guides/how-to-configure-load-balancing-with-tls-encryption-on-a-kubernetes-cluster/
# You must add a cert to avoid using the built in dev copy.
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ts-ocr-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-ocr-app
  labels:
    app: ts-ocr-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ts-ocr-app
  template:
    metadata:
      labels:
        app: ts-ocr-app
      namespace: ts-ocr-ns
    spec:
      containers:
      - name: ocr
        image: townsuite/ocr:latest
        ports:
        - containerPort: 443
        livenessProbe:
          httpGet:
            path: /healthz
            port: 443
          initialDelaySeconds: 3
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /healthz
            port: 443
          initialDelaySeconds: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 443
          initialDelaySeconds: 3
          periodSeconds: 10
      #imagePullSecrets:
      #- name: [Your Secrets Name]

---
apiVersion: v1
kind: Service
metadata:
  name: ts-ocr-service
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: ts-ocr-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-ocr-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - [Add your url here]
    secretName: letsencrypt-secret-prod
  rules:
  - host: [Add your url here]
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ts-ocr-service
            port:
              number: 443
